<resources>
    <string name="app_name">ASTRO FUTURE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dob_date">Date of Birth</string>
    <string name="dob_time">Time of Birth</string>
    <string name="name">Name</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_user"> ADD A NEW USER</string>
    <string name="geo_places_tag">GooglePlacesAutocompleteActivity</string>
    <string name="title_activity_geo_places_auto_complete">GeoPlacesAutoCompleteActivity</string>
    <string name="saveText">Save And Continue</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_activity_numerology_description">NumerologyDescriptionActivity</string>
    <string name="title_activity_daily_prediction">TODAY\'S PERSONALIZED PREDICTION</string>
    <string name="title_activity_numero_table">PERSONALIZED NUMEROLOGY REPORTS</string>
    <string name="delete_success_msg">Successfully deleted the item</string>
    <string name="about_us">About Us</string>
    <string name="no_user_present">Uh oh ! No User Profile is added. Quickly add one</string>
    <string name="intro_button_desc">Click on this button to add profile and proceed...</string>
    <string name="intro_button_title">Hey There !!</string>
    <string name="contacts_access_denied">Permission denied to read your External storage</string>
    <string name="user_profile_success">Successfully added new user profile</string>
    <string name="valid_place_error">Enter a valid place</string>
    <string name="name_empty_error">Name is mandatory</string>
    <string name="dob_empty_error">Date of birth is mandatory</string>
    <string name="time_empty_error">Time of birth is mandatory</string>
    <string name="gender_empty_error">Gender options has to be selected</string>
    <string name="empty_place_error">Place of birth is mandatory</string>
    <string name="title_activity_astro_dash_board">KUNDLI DASHBOARD</string>


    <string name="num_details_text">What Number Says</string>
    <string name="fav_time_text">Fav Time</string>
    <string name="fav_mantra_text">Fav Mantra</string>
    <string name="fav_vastu_text">Fav Mantra</string>
    <string name="fav_lord_text">Fav Lord</string>
    <string name="daily_pred_text">Daily Prediction</string>
    <string name="num_report_text">Numero Report</string>
    <string name="name_hint">Name</string>
    <string name="place_of_birth_hint">Please enter your place of birth</string>
    <string name="dob_hint">Date (dd-mm-yyyy)</string>
    <string name="dob_time_hint">Time (hh:mm)</string>
    <string name="add_user_toast">Enter the birth related details</string>

    <string name="nav_drawer_subtitle">Numerology</string>
    <string name="default_string">TextView</string>
    <string name="kundli_button_text">View Kundli</string>
    <string name="splash_sub_title">Your Own Personalized Astrology App</string>
    <string name="you_selected">You selected</string>
    <string name="widget_get_prediction">GET TODAY\'S PREDICTION</string>
    <string name="widget_error_msg">Kindly add a profile first</string>
    <string name="widget_refresh">Refresh</string>
</resources>
