<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_astro_dash_board"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.akshitgupta.capstoneproject.dashboard.AstroDashBoardActivityFragment"
    tools:showIn="@layout/activity_astro_dash_board">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

               <!-- <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/daily"
                        android:id="@+id/dash_daily_pred" />

                    <TextView
                        android:text="@string/daily_pred_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dash_daily_pred_text"
                        android:textAlignment="center" />

                </LinearLayout>-->


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/report"
                        android:id="@+id/dash_num_report" />

                    <TextView
                        android:text="@string/num_report_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dash_num_report_text"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/nos"
                        android:id="@+id/dash_num_details"
                        android:cropToPadding="false" />

                    <TextView
                        android:text="@string/num_details_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dash_num_details_text"
                        android:layout_weight="1"
                        android:textAlignment="center" />
                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/time"
                        android:id="@+id/dash_fav_time" />

                    <TextView
                        android:text="@string/fav_time_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dash_fav_time_text"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/mantra"
                        android:id="@+id/dash_fav_mantra" />

                    <TextView
                        android:text="@string/fav_mantra_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dash_fav_mantra_text"
                        android:layout_weight="1"
                        android:textAlignment="center" />

                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/home"
                        android:id="@+id/dash_fav_vastu" />

                    <TextView
                        android:text="@string/fav_vastu_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dash_fav_vastu_text"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/lord"
                        android:id="@+id/dash_lord" />

                    <TextView
                        android:text="@string/fav_lord_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/dash_lord_text"
                        android:textAlignment="center" />
                </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
